# personal-task-station

./: .codex-prompt.txt  .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 7fdff7a46e18_add_email_account_and_import_log.py  df01613ac9d6_initial.py
fixtures/: sample_transactions.csv
research/: payment-platform-apis.md
scripts/: deploy-linux-server.sh  docker-entrypoint.sh  generate_certs.py  package-linux-client.sh  package-windows-client.ps1  validate_security.py
specification/: design.md  requirements.md  tasks.md
src/personal_task_station/: __init__.py
src/personal_task_station/client/: __init__.py  api_client.py  config.py  main.py  main_window.py
src/personal_task_station/client/dialogs/: __init__.py  date_tasks_dialog.py  (+1 more)
src/personal_task_station/server/: __init__.py  app.py  dependencies.py
src/personal_task_station/shared/: __init__.py  database.py  enums.py  models.py  schemas.py  security.py  settings.py
src/personal_task_station/skills/: __init__.py  base.py  finance_skill.py  task_skill.py
tests/: conftest.py
tests/deployment/: test_deployment_assets.py
tests/integration/: test_billing_api.py  test_security.py  test_skills.py  test_task_api.py  test_tls.py
tests/ui/: test_calendar_widget.py  test_connection_config.py  test_date_tasks_dialog.py  test_task_dialog.py
tests/unit/: test_alipay_api.py  test_billing_pipeline.py  test_client_config.py  test_email_parsers.py  test_task_service.py
(+29 files in other folders)
